--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "isaxvelte-pro",
-	"version": "0.0.4",
+	"version": "0.0.5",
 	"description": "Iconsax for Svelte, based on iconsax",
 	"repository": {
 		"type": "git",
@@ -29,6 +29,11 @@
 		"format": "prettier --write ."
 	},
 	"exports": {
+		".": {
+			"types": "./dist/index.d.ts",
+			"svelte": "./dist/index.js",
+			"default": "./dist/index.js"
+		},
 		"./Aave": {
 			"types": "./dist/Aave.svelte.d.ts",
 			"svelte": "./dist/Aave.svelte"
