--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "isaxvelte-pro",
-	"version": "0.0.7",
+	"version": "0.0.8",
 	"description": "Iconsax for Svelte, based on iconsax",
 	"repository": {
 		"type": "git",
@@ -4048,7 +4048,7 @@
 		"prettier": "^3.1.1",
 		"prettier-plugin-svelte": "^3.1.2",
 		"publint": "^0.1.9",
-		"svelte": "^4.2.7",
+		"svelte": "^5.0.0-next.171",
 		"svelte-check": "^3.6.0",
 		"tslib": "^2.4.1",
 		"typescript": "^5.0.0",
